--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lexical/list": "^0.17.0",
     "@lexical/rich-text": "^0.17.0",
     "@payloadcms/richtext-lexical": "^0.11.2",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
