--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18",
     "eslint": "9.x",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "husky": "^9.1.4",
