--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0"
   },
