--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
     "geist": "^1.3.1",
+    "install": "^0.13.0",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
