--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5",
     "typescript-eslint": "^8.0.0"
-  }
+  },
+  "packageManager": "yarn@4.4.0"
 }
