--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/escape-html": "^1.0.4",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
+    "formik": "^2.4.6",
     "geist": "^1.3.1",
     "install": "^0.13.0",
     "next": "14.2.5",
