--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "@lexical/list": "^0.17.0",
     "@lexical/rich-text": "^0.17.0",
     "@payloadcms/richtext-lexical": "^0.11.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
     "formik": "^2.4.6",
     "geist": "^1.3.1",
     "install": "^0.13.0",
+    "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.9",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
