--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
