--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@lexical/list": "^0.17.0",
     "@lexical/rich-text": "^0.17.0",
+    "@payloadcms/live-preview-react": "^0.2.0",
     "@payloadcms/richtext-lexical": "^0.11.2",
     "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/typography": "^0.5.13",
