--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "install": "^0.13.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-code-blocks": "^0.1.6",
