--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Lint
         run: yarn lint
 
-      - name: Build
-        run: yarn build
+#      - name: Build
+#        run: yarn build
